/* {{initialism-old|en}} */ <PVC#21687029>

--- a/en/p/PVC.4323.wikitext
+++ b/en/p/PVC.4323.wikitext
@@ -4,9 +4,10 @@
 ==={{initialism-old|en}}===
 '''PVC'''
 
-# {{context|organic compound|lang=en}} [[polyvinyl chloride|''p''oly''v''inyl ''c''hloride]]
-# {{context|medicine|lang=en}} [[premature ventricular contraction|'''P'''remature '''V'''entricular '''C'''ontraction]] of the heart.
-# {{context|networking|lang=en}} permanent [[virtual circuit]]
+# {{context|organic compound|lang=en}} [[polyvinyl chloride|'''p'''oly'''v'''inyl '''c'''hloride]]
+# {{context|medicine|lang=en}} [[premature ventricular contraction|'''p'''remature '''v'''entricular '''c'''ontraction]] of the heart
+# {{context|medicine|lang=en}} [[peripheral venous catheter|'''p'''eripheral '''v'''enous '''c'''atheter]]
+# {{context|networking|lang=en}} '''p'''ermanent [[virtual circuit|'''v'''irtual '''c'''ircuit]]
 
 ====Translations====
 {{trans-top|organic compound}}
