--- a/en/f/fazes.746871.wikitext
+++ b/en/f/fazes.746871.wikitext
@@ -13,6 +13,9 @@
 ----
 ==Portuguese==
 
+===Pronunciation===
+* {{a|PT}} {{IPA|/ˈfa.zɨʃ/|lang=pt}}
+
 ===Verb===
 {{head|pt|verb form}}
 # {{conjugation of|fazer||2|s|present|indicative|lang=pt}}
