--- a/en/f/FEMA.26217.wikitext
+++ b/en/f/FEMA.26217.wikitext
@@ -1,15 +1,18 @@
 ==English==
 
-==={{acronym-old|en}}===
-'''FEMA'''
+===Pronunciation===
+* {{IPA|/ˈfimə/}}
+* {{homophones|femur|lang=en}} {{qualifier|non-rhotic accents}}
 
-# Federal Emergency Management Agency
+===Proper noun===
+{{en-proper noun}}
 
-===External links===
-http://www.fema.gov/
+# {{w|Federal Emergency Management Agency}}
 
 ===Anagrams===
 * [[fame#English|fame]]
+
+[[Category:English acronyms]]
 
 [[et:FEMA]]
 [[he:FEMA]]
