--- a/en/o/onesie.741289.wikitext
+++ b/en/o/onesie.741289.wikitext
@@ -6,7 +6,7 @@
 {{en-noun}}
 
 # {{context|US|lang=en}} A one-piece [[garment]] for an [[infant]] or small [[child]], generally worn over a [[diaper]].
-# One-piece adult loungewear.
+# One-piece adult loungewear [[jumpsuit]].
 # One-piece fashionable streetwear worn mostly by teenagers.
 
 [[Category:en:Clothing]]
