--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -20,13 +20,13 @@ Ultimately from {{term|dudde||ragged clothing or cloth}}, of uncertain origin be
 ====Translations====
 {{trans-top|broken or nonfunctional device that does not perform its intended function}}
 * Chinese:
-*: Mandarin: {{t|cmn|瞎炮|tr=xiāpào|sc=Hani}}, {{t|cmn|啞炮|sc=Hani}}, {{t|cmn|哑炮|tr=yǎpào|sc=Hani}} {{qualifier|blind shell}}
+*: Mandarin: {{t|cmn|瞎炮|tr=xiāpào|sc=Hani}} {{qualifier|unexploded ordnance}}, {{t|cmn|啞炮|sc=Hani}}, {{t|cmn|哑炮|tr=yǎpào|sc=Hani}} {{qualifier|unexploded ordnance}}
 * Finnish: {{t+|fi|susi}}, {{t+|fi|suutari}}
 * French: {{t-|fr|fausse alerte}}
 * German: {{t+|de|Blindgänger}} {{m}}
 {{trans-mid}}
 * Japanese: {{t|ja|不発弾|tr=ふはつだん, fuhatsudan|sc=Jpan}} {{qualifier|unexploded ordnance}}
-* Russian: {{t-|ru|невзрывающийся|tr=nevzryvájuščijsja}}, {{t+|ru|неисправный|tr=neisprávnyj}}, {{t|ru|неразорвавшийся снаряд|m|tr=nerazorvávšijsja snarjád|sc=Cyrl}} {{qualifier|blind shell}}
+* Russian: {{t|ru|[[неразорвавшийся]] [[снаряд]]|m|tr=nerazorvávšijsja snarjád|sc=Cyrl}} {{qualifier|unexploded ordnance}}
 * Swedish: {{t-|sv|blindgångare|c}}
 {{trans-bottom}}
 
