--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -22,9 +22,9 @@ Ultimately from {{term|dudde||ragged clothing or cloth}}, of uncertain origin be
 * Chinese:
 *: Mandarin: {{t|cmn|瞎炮|tr=xiāpào|sc=Hani}} {{qualifier|unexploded ordnance}}, {{t|cmn|啞炮|sc=Hani}}, {{t|cmn|哑炮|tr=yǎpào|sc=Hani}} {{qualifier|unexploded ordnance}}
 * Finnish: {{t+|fi|susi}}, {{t+|fi|suutari}}
-* French: {{t-|fr|fausse alerte}}
-* German: {{t+|de|Blindgänger}} {{m}}
+* French: {{t|fr|[[munition]] [[non]] [[explosée]]}} {{qualifier|unexploded ordnance}}
 {{trans-mid}}
+* German: {{t+|de|Blindgänger|m}}
 * Japanese: {{t|ja|不発弾|tr=ふはつだん, fuhatsudan|sc=Jpan}} {{qualifier|unexploded ordnance}}
 * Russian: {{t|ru|[[неразорвавшийся]] [[снаряд]]|m|tr=nerazorvávšijsja snarjád|sc=Cyrl}} {{qualifier|unexploded ordnance}}
 * Swedish: {{t-|sv|blindgångare|c}}
