--- a/en/d/dud.26266.wikitext
+++ b/en/d/dud.26266.wikitext
@@ -21,7 +21,7 @@ Ultimately from {{term|dudde||ragged clothing or cloth}}, of uncertain origin be
 ====Translations====
 {{trans-top|broken or nonfunctional device that does not perform its intended function}}
 * Chinese:
-*: Mandarin: {{t|cmn|瞎炮|tr=xiāpào|sc=Hani}} {{qualifier|unexploded ordnance}}, {{t|cmn|啞炮|sc=Hani}}, {{t|cmn|哑炮|tr=yǎpào|sc=Hani}} {{qualifier|unexploded ordnance}}
+*: Mandarin: {{t|cmn|瞎炮|tr=xiāpào|sc=Hani}} {{qualifier|unexploded ordnance}}, {{t|cmn|啞炮|sc=Hani}}, {{t|cmn|哑炮|tr=yǎpào|sc=Hani}} {{qualifier|unexploded ordnance}}, {{t|cmn|啞彈|sc=Hani}}, {{t|cmn|哑弹|tr=yǎdàn|sc=Hani}}, {{t|cmn|瞎彈|sc=Hani}}, {{t|cmn|瞎弹|tr=xiādàn|sc=Hani}}
 * Finnish: {{t+|fi|susi}}, {{t+|fi|suutari}}
 * French: {{t|fr|[[munition]] [[non]] [[explosée]]}} {{qualifier|unexploded ordnance}}
 {{trans-mid}}
