--- a/en/-/-mancer.855704.wikitext
+++ b/en/-/-mancer.855704.wikitext
@@ -9,3 +9,5 @@
 # A practitioner of a specific type of [[divination]].
 
 [[Category:en:Divination]]
+There is almost an infinite of prefix for -mancer. here are some of the most common
+Pyromancer, Necromancer, Technomancer, Spiritmancer, Electr(i/o)mancer, Frostmancer, Aquamancer, and Terramancer
