--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -17,14 +17,11 @@ From {{etyl|enm|en}} {{term|fraccioun||a breaking|lang=enm}}, from {{etyl|xno|en
 # {{context|chemistry|lang=en}} A [[component]] of a [[mixture]], separated by [[fractionation]].
 # In a [[eucharistic]] [[service]], the breaking of the [[host#Noun_3|host]].
 # A small amount.
-#* {{quote-news
-|year=2011
-|date=January 29
-|author=Chris Bevan
-|title=Torquay   0 - 1   Crawley Town
-|work=BBC
-|url=http://news.bbc.co.uk/sport2/hi/football/fa_cup/9379079.stm
-|page=
+#*{{quote-book|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
+|title={{w|The Celebrity}}|chapter=2
+|passage=I had occasion […] to make a somewhat long business trip to Chicago, and on my return […] I found Farrar awaiting me in the railway station. He smiled his wonted '''fraction''' by way of greeting, […], and finally leading me to his buggy, turned and drove out of town.}}
+#* {{quote-news|year=2011|date=January 29|author=Chris Bevan|work=BBC
+|title=[http://news.bbc.co.uk/sport2/hi/football/fa_cup/9379079.stm Torquay 0-1 Crawley Town]
 |passage=After kick-off was delayed because of crowd congestion, Torquay went closest to scoring in a cagey opening 30 minutes, when Danny Stevens saw a fierce shot from the edge of the area swerve a '''fraction''' wide.}}
 
 ====Quotations====
