--- a/en/b/bragging rights.856465.wikitext
+++ b/en/b/bragging rights.856465.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Noun===
-{{en-noun|head=[[bragging]] [[rights]]|''[[plurale tantum|always plural]]''}} [[Category:English pluralia tantum]]
+{{en-plural noun|head=[[bragging]] [[rights]]}}
 
 # {{context|idiomatic|lang=en}} The [[prerogative]] to [[praise]] oneself for an [[accomplishment]] or for possession of a [[superior]] [[characteristic]].
 #* '''2008''', Andrea Sachs, "[http://www.time.com/time/magazine/article/0,9171,1820126,00.html Business books (review of ''How to Get Rich'' by Felix Dennis)]," ''Time'', 3 Jul.,
