--- a/en/m/mill.4306.wikitext
+++ b/en/m/mill.4306.wikitext
@@ -87,7 +87,7 @@ From {{etyl|enm|en}} {{term|mille|lang=enm}}, {{etyl|ang|en}} {{term|mylen|lang=
 * Kurdish:
 *: Sorani: {{t+|ku|ئاش}}
 {{trans-mid}}
-* Latin: {{t-|la|mola}}
+* Latin: {{t-|la|mola}}, {{t|la|molendinum|n}}
 * Latvian: {{t-|lv|malējs}}
 * Luxembourgish: {{t-|lb|Millen|f}}
 * Macedonian: {{t-|mk|млин|m|tr=mlin}}, {{t-|mk|мелница|f|tr=mélnica}}, {{t-|mk|мелница|f|tr=mélnica}}
