--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -2,7 +2,7 @@
 {{slim-wikipedia}}
 
 ===Etymology===
-From {{etyl|enm|en}} {{term|plege|plege|lang=enm}}, from {{etyl|xno|en}} {{term|plege|plege|lang=fro}}, from {{etyl|fro|en}} {{term|plege|plege|lang=fro}} (Modern {{etyl|fr|-}} {{term|pleige|lang=fr}}) from {{etyl|ML.|en}} {{term|plevium}}, {{term|plebium}}, from {{etyl|ML.|en}} {{term|plebire}} "to pledge", from {{etyl|frk|en}} *{{term||plegan|to pledge, support, guarantee}}, from Proto-Germanic {{term/t|gem-pro|*plegō||responsibility, habit}}, from Proto-Indo-European {{term/t|ine-pro|*dlegh-}}. Akin to {{etyl|goh|-}} {{term|pflegan||lang=goh|to take care of, be accustomed to}}, {{etyl|osx|-}} {{term|plegan|lang=osx||to vouch for}}, {{etyl|ang|-}} {{term|pleon|lang=ang|plēon|to risk, endanger}}. More at [[plight]].
+From {{etyl|enm|en}} {{term|plege|plege|lang=enm}}, from {{etyl|xno|en}} {{term|plege|plege|lang=fro}}, from {{etyl|fro|en}} {{term|plege|plege|lang=fro}} (Modern {{etyl|fr|-}} {{term|pleige|lang=fr}}) from {{etyl|ML.|en}} {{term|plevium|lang=la}}, {{term|plebium|lang=la}}, from {{etyl|ML.|en}} {{term|plebio|plebio|I pledge|lang=la}}, from {{etyl|frk|en}} {{term/t|frk|*plegan||to pledge; to support; to guarantee}}, from Proto-Germanic {{term/t|gem-pro|*plegō||responsibility, habit}}, from Proto-Indo-European {{term/t|ine-pro|*dlegh-}}. Akin to {{etyl|goh|-}} {{term|pflegan||lang=goh|to take care of, be accustomed to}}, {{etyl|osx|-}} {{term|plegan|lang=osx||to vouch for}}, {{etyl|ang|-}} {{term|pleon|plēon|to risk, endanger|lang=ang}}. More at {{l|en|plight}}.
 
 ===Pronunciation===
 * {{IPA|/plɛdʒ/}}, {{X-SAMPA|/plEdZ/}}
@@ -15,11 +15,11 @@ From {{etyl|enm|en}} {{term|plege|plege|lang=enm}}, from {{etyl|xno|en}} {{term|
 # To make a [[solemn]] [[promise]] (to do something).
 # To [[deposit]] something as a [[security]]; to [[pawn]].
 # {{context|transitive|lang=en}} To give assurance of friendship by the act of drinking; to drink to one's health.
-#*'''1773''', [[w:Oliver Goldsmith|Oliver Goldsmith]], ''[[s:She Stoops to Conquer|She Stoops to Conquer]]''
-#*:HARDCASTLE [Taking the cup.] I hope you'll find it to your mind. I have prepared it with my own hands, and I believe you'll own the ingredients are tolerable. Will you be so good as to '''pledge''' me, sir? Here, Mr. Marlow, here is to our better acquaintance. [Drinks.]
-#*'''1852''', Matthew Arnold, ''Tristram and Iseult''
-#*:Reach me my golden cup that stands by thee,	        
-#*:And '''pledge''' me in it first for courtesy.
+#* '''1773''', [[w:Oliver Goldsmith|Oliver Goldsmith]], ''[[s:She Stoops to Conquer|She Stoops to Conquer]]''
+#*: HARDCASTLE [Taking the cup.] I hope you'll find it to your mind. I have prepared it with my own hands, and I believe you'll own the ingredients are tolerable. Will you be so good as to '''pledge''' me, sir? Here, Mr. Marlow, here is to our better acquaintance. [Drinks.]
+#* '''1852''', Matthew Arnold, ''Tristram and Iseult''
+#*: Reach me my golden cup that stands by thee,	
+#*: And '''pledge''' me in it first for courtesy.
 ====Translations====
 {{trans-top|to make a solemn promise}}
 * Arabic: {{t-|ar|تعهد|alt=تَعَهدَ|sc=Arab}}
