--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -76,14 +76,14 @@ From {{etyl|enm|en}} {{term|plege|plege|lang=enm}}, from {{etyl|xno|en}} {{term|
 # A person who has taken a pledge of allegiance to a college [[fraternity]], but not yet formally approved.
 # A security to [[guarantee]] [[payment]] of a [[debt]].
 # A [[drinking]] [[toast]].
-# ''(the pledge):'' A promise to [[abstain]] from [[drinking]] [[alcohol]].
+# {{context|with {{l|en|the}}|lang=en}} A promise to [[abstain]] from [[drinking]] [[alcohol]].
 
 ====Synonyms====
-* [[promise]]
-* [[commitment]]
+* {{l|en|promise}}
+* {{l|en|commitment}}
 
 ====Derived terms====
-* [[pledgeless]]
+* {{l|en|pledgeless}}
 
 ====Translations====
 {{trans-top|solemn promise}}
