#: {{rfquotek|Totten}}  # {{context|obsolete|lang=en}} Turn; purpose; inclination; ends.  #* Fletcher  #*: Farewell, poor swain; thou art not for my '''bend'''.  # In the leather trade, the best quality of [[sole]] [[leather]]; a [[butt]].  # {{context|mi <bend#21826245>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -176,9 +176,18 @@ From {{etyl|enm|en}} {{term|benden|lang=enm}}, from {{etyl|ang|en}} {{term|benda
 #: {{usex|There's a sharp '''bend''' in the road ahead.|lang=en}}
 # {{context|nautical|lang=en}} Any of the various [[knot]]s which [[join]] the ends of two [[line]]s.<!-- or the end of a line into some other object; (the latter are called hitch)
 #* Note: In naval parlance, a knot involves splicing the strands of a rope.-->
+#: {{rfquotek|Totten}}
 # {{context|in the plural|medicine|diving|with ''the''|lang=en}} A [[severe]] [[condition]] caused by excessively quick [[decompression]], causing bubbles of [[nitrogen]] to form in the [[blood]]; [[decompression sickness]].
 #: {{usex|A diver who stays deep for too long must ascend very slowly in order to prevent the '''bends'''.|lang=en}}
 # {{context|heraldiccharge|lang=en}} One of the [[honourable]] [[ordinary|ordinaries]] formed by two [[diagonal]] [[line]]s drawn from the [[dexter chief]] to the [[sinister base]]; it generally occupies a [[fifth]] part of the [[shield]] if [[uncharged]], but if [[charged]] one [[third]].
+# {{context|obsolete|lang=en}} Turn; purpose; inclination; ends.
+#* Fletcher
+#*: Farewell, poor swain; thou art not for my '''bend'''.
+# In the leather trade, the best quality of [[sole]] [[leather]]; a [[butt]].
+# {{context|mining|lang=en}} Hard, [[indurated]] [[clay]]; [[bind]].
+# {{context|nautical|in the plural|lang=en}} The thickest and strongest [[plank]]s in a ship's sides, more generally called [[wale]]s, which have the beams, knees, and futtocks bolted to them.
+# {{context|nautical|in the plural|lang=en}} The frames or ribs that form the ship's body from the [[keel]] to the top of the sides.
+#: ''the midship '''bends'''''
 
 ====Derived terms====
 {{rel-top|terms derived from ''bend (noun)''}}
