--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -8,7 +8,7 @@ From {{etyl|la|en}} {{term|minimus||lang=la|least, smallest}}
 * {{audio|En-us-minimum.ogg|Audio (US)}}
 
 ===Noun===
-{{en-noun|pl2=minima|pl=minimums}}
+{{en-noun|pl2=minima}}
 
 # The [[lowest]] [[limit]].
 #: ''We prefer candidates with a '''minimum''' of 4 years experience in the field.''
