--- a/en/m/multiplication.26254.wikitext
+++ b/en/m/multiplication.26254.wikitext
@@ -78,6 +78,8 @@ When applied to whole numbers, multiplication can be considered as repeated addi
 * [[multiplication]]: ([[multiplier]]) × ([[multiplicand]]) = ([[factor]]) × ([[factor]]) = ([[product]])
 * [[division]]: ([[dividend]]) ÷ ([[divisor]]) = ([[quotient]]), [[remainder]] left over if divisor does not divide dividend
 
+[[Category:English words suffixed with -tion]]
+
 ----
 
 ==French==
