--- a/en/e/estadounidense.4303.wikitext
+++ b/en/e/estadounidense.4303.wikitext
@@ -1,3 +1,31 @@
+{{also|estado-unidense}}
+==Galician==
+
+===Etymology===
+{{suffix|Estados Unidos|ense|gloss1=United States|lang=gl}}
+
+===Adjective===
+{{gl-adj}}
+
+# [[American]] {{gloss|of the United States}}
+
+====Synonyms====
+* {{l|gl|americano}}
+* {{l|gl|norteamericano}}
+
+===Noun===
+{{gl-noun|mf}}
+
+# [[American]] {{gloss|someone from the United States}}
+
+====Synonyms====
+* {{l|gl|americano}}
+* {{l|gl|norteamericano}}
+
+[[Category:gl:Nationalities]]
+
+----
+
 ==Spanish==
 
 ===Etymology===
