--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -32,9 +32,12 @@ See [[bind]]
 |title=[[w:The Case of Miss Elliott|The Hocussing of Cigarette]]
 |chapter=5|url=http://openlibrary.org/works/OL8479084W
 |passage=Then I had a good think on the subject of the hocussing of Cigarette, and I was reluctantly '''bound''' to admit that once again the man in the corner had found the only possible solution to the mystery.}}
-#: ''You are not legally '''bound''' to reply.''
+#: {{usex|lang=en|You are not legally '''bound''' to reply.}}
 # {{context|with infinitive|lang=en}} Very [[likely]] (to).
-#: ''They were '''bound''' to come into conflict eventually.
+#*{{quote-book|year=1913|author={{w|Joseph C. Lincoln}}|chapter=5
+|title=[http://openlibrary.org/works/OL5535161W Mr. Pratt's Patients]
+|passage=When you're well enough off so's you don't have to fret about anything but your heft or your diseases you begin to get queer, I suppose. And the queerer the cure for those ailings the bigger the attraction. A place like the Right Livers' Rest was '''bound''' to draw freaks, same as molasses draws flies.}}
+#: {{usex|lang=en|They were '''bound''' to come into conflict eventually.}}
 # {{context|linguistics|of a [[morpheme]]|lang=en}} That cannot stand alone as a free word.
 # {{context|mathematics|logic|of a [[variable]]|lang=en}} [[constrained|Constrained]] by a [[quantifier]].
 
