Fixing translation table to use {{t}} ([[User:Kephir/gadgets/xte|assisted]]) <1 Kings#22140170>

--- a/en/1/1 Kings.801703.wikitext
+++ b/en/1/1 Kings.801703.wikitext
@@ -13,9 +13,9 @@
 ====Translations====
 {{trans-top|book of the Bible}}
 * French: {{t-|fr|1 Rois}}
-*Greek: {{t-|el|Α' Βασιλειών||tr=A' Vasileión}}, {{t-|el|Βασιλείς Α'||tr=Vasileís A'}}
+* Greek: {{t-|el|Α' Βασιλειών||tr=A' Vasileión}}, {{t-|el|Βασιλείς Α'||tr=Vasileís A'}}
 {{trans-mid}}
-*Japanese: [[列王記上]] (retsuō kijō)
+* Japanese: {{t|ja|列王記上|tr=retsuō kijō|sc=Jpan}}
 {{trans-bottom}}
 
 [[Category:English terms spelled with 1]]
