--- a/en/2/2 Samuel.801688.wikitext
+++ b/en/2/2 Samuel.801688.wikitext
@@ -15,7 +15,7 @@
 {{trans-top|book of the Bible}}
 * Greek: {{t-|el|Β' Σαμουήλ||tr=B' Samouíl|sc=Grek}}
 {{trans-mid}}
-* Japanese: [[サムエル記下]] (samueru kige)
+* Japanese: {{t|ja|サムエル記下|tr=samueru kige|sc=Jpan}}
 {{trans-bottom}}
 
 [[Category:English terms spelled with 2]]
