--- a/en/-/-mancer.855704.wikitext
+++ b/en/-/-mancer.855704.wikitext
@@ -9,3 +9,6 @@
 # A practitioner of a specific type of [[divination]].
 
 [[Category:en:Divination]]
+
+ [[mancer]] someone who is destined for a brighter future.
+:when he grew up he was a mancer i.e he always dream t big, he never expected to be among the poor.
