t+et:[[ment]] t-balance ([[WT:EDIT|Assisted]]) <cop#22198780>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -64,6 +64,7 @@ Short for {{term|copper||police officer}}, itself from {{term|cop||one who cops}
 {{trans-top|police officer}}
 * Bulgarian: {{t+|bg|полицай|m}},  {{t+|bg|ченге|n}}
 * Dutch: {{t+|nl|diender|m}}
+* Estonian: {{t|et|ment}}
 * Finnish: {{t+|fi|pollari}},  {{t+|fi|kyttä}}
 * French: {{t+|fr|flic|m}}, {{t+|fr|keuf|m}},  {{t+|fr|poulet|m}}, {{t+|fr|police|f}} {{qualifier|Quebec}}
 * German: {{t+|de|Gendarm}}
