--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -62,22 +62,22 @@ Short for {{term|copper||police officer}}, itself from {{term|cop||one who cops}
 
 =====Translations=====
 {{trans-top|police officer}}
-* Bulgarian: {{t+|bg|полицай|m}},  {{t+|bg|ченге|n}}
+* Bulgarian: {{t+|bg|полицай|m}}, {{t+|bg|ченге|n}}
 * Dutch: {{t+|nl|diender|m}}
 * Estonian: {{t|et|ment}}
-* Finnish: {{t+|fi|pollari}},  {{t+|fi|kyttä}}
-* French: {{t+|fr|flic|m}}, {{t+|fr|keuf|m}},  {{t+|fr|poulet|m}}, {{t+|fr|police|f}} {{qualifier|Quebec}}
+* Finnish: {{t+|fi|pollari}}, {{t+|fi|kyttä}}
+* French: {{t+|fr|flic|m}}, {{t+|fr|keuf|m}}, {{t+|fr|poulet|m}}, {{t+|fr|police|f}} {{qualifier|Quebec}}
 * German: {{t+|de|Gendarm}}
 * Greek: {{t+|el|μπάτσος|m|tr=bátsos|sc=Grek}}
-* Hebrew: {{t+|he|שוטר|m|tr=shotér}},  {{t-|he|שוטרת|f|tr=shotéret}}
+* Hebrew: {{t+|he|שוטר|m|tr=shotér}}, {{t-|he|שוטרת|f|tr=shotéret}}
 * Hungarian: {{t+|hu|zsaru}}
 * Italian: {{t-|it|piedipiatti}}
 * Macedonian: {{t-|mk|цајкан|m|tr=cájkan|sc=Cyrl}}, {{t-|mk|џандар|m|tr=džándar|sc=Cyrl}}
 {{trans-mid}}
 * Norwegian: {{t+|no|purk|m}}
 * Polish: {{t+|pl|gliniarz|m}}, {{t+|pl|glina|m}}
-* Russian: {{t+|ru|коп|m|tr=kop}} {{qualifier|American}}, {{t+|ru|мент|m|tr=ment}} {{qualifier|offensive}}, {{t+|ru|лягавый|m|tr=ljagávyj}} / {{t+|ru|легавый|m|tr=legávyj}} {{qualifier|offensive}}, {{t+|ru|мусор|m|tr=músor}} {{qualifier|more offensive}},   {{t+|ru|фараон|m|tr=faraón}} {{qualifier|slang, dated}}, {{t+|ru|полицай|m|tr=policáj|sc=Cyrl}} {{qualifier|slang}}
-* Slovak: [[poliš]] {{m}}, [[hekáč]] {{m}}
+* Russian: {{t+|ru|коп|m|tr=kop}} {{qualifier|American}}, {{t+|ru|мент|m|tr=ment}} {{qualifier|offensive}}, {{t+|ru|лягавый|m|tr=ljagávyj}}, {{t+|ru|легавый|m|tr=legávyj}} {{qualifier|offensive}}, {{t+|ru|мусор|m|tr=músor}} {{qualifier|more offensive}}, {{t+|ru|фараон|m|tr=faraón}} {{qualifier|slang, dated}}, {{t+|ru|полицай|m|tr=policáj|sc=Cyrl}} {{qualifier|slang}}
+* Slovak: {{t|sk|poliš|m}}, {{t|sk|hekáč|m}}
 * Spanish: {{t-|es|tombo|m}}, {{t+|es|paco|m}}
 * Swedish: {{t+|sv|snut}}
 * Turkish: {{t+|tr|aynasız}}
