Fixing translation table to use {{t}} ([[User:Kephir/gadgets/xte|assisted]]) <cop#22198783>

--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -36,7 +36,7 @@ Possibly from {{etyl|frm|en}} {{term|capere||to capture|lang=frm}}, from {{etyl|
 
 =====Translations=====
 {{trans-top|to capture, to take ''(informal)''}}
-* Bulgarian: [[хващам]], [[пипвам]], [[арестувам]]
+* Bulgarian: {{t|bg|хващам|sc=Cyrl}}, {{t|bg|пипвам|sc=Cyrl}}, {{t|bg|арестувам|sc=Cyrl}}
 * Greek: {{t+|el|παίρνω|tr=paírno|sc=Grek}}
 {{trans-mid}}
 * Russian: {{t+|ru|схватить|tr=sxvatítʹ|sc=Cyrl}}
