--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -67,13 +67,14 @@ Short for {{term|copper||police officer}}, itself from {{term|cop||one who cops}
 * Estonian: {{t|et|ment}}
 * Finnish: {{t+|fi|pollari}}, {{t+|fi|kyttä}}
 * French: {{t+|fr|flic|m}}, {{t+|fr|keuf|m}}, {{t+|fr|poulet|m}}, {{t+|fr|police|f}} {{qualifier|Quebec}}
-* German: {{t+|de|Gendarm}}
+* German: {{t+|de|Gendarm}}, {{t|de|Bulle|m}}
 * Greek: {{t+|el|μπάτσος|m|tr=bátsos|sc=Grek}}
 * Hebrew: {{t+|he|שוטר|m|tr=shotér}}, {{t-|he|שוטרת|f|tr=shotéret}}
 * Hungarian: {{t+|hu|zsaru}}
 * Italian: {{t-|it|piedipiatti}}
-* Macedonian: {{t-|mk|цајкан|m|tr=cájkan|sc=Cyrl}}, {{t-|mk|џандар|m|tr=džándar|sc=Cyrl}}
+* Japanese: {{t|ja|おまわりさん|tr=o-mawari-san|sc=Jpan}} {{qualifier|colloquial, inoffensive}}
 {{trans-mid}}
+* Macedonian: {{t-|mk|цајкан|m|tr=cájkan|sc=Cyrl}}, {{t-|mk|џандар|m|tr=džándar|sc=Cyrl}}
 * Norwegian: {{t+|no|purk|m}}
 * Polish: {{t+|pl|gliniarz|m}}, {{t+|pl|glina|m}}
 * Russian: {{t+|ru|коп|m|tr=kop}} {{qualifier|American}}, {{t+|ru|мент|m|tr=ment}} {{qualifier|offensive}}, {{t+|ru|лягавый|m|tr=ljagávyj}}, {{t+|ru|легавый|m|tr=legávyj}} {{qualifier|offensive}}, {{t+|ru|мусор|m|tr=músor}} {{qualifier|more offensive}}, {{t+|ru|фараон|m|tr=faraón}} {{qualifier|slang, dated}}, {{t+|ru|полицай|m|tr=policáj|sc=Cyrl}} {{qualifier|slang}}
