--- a/en/z/Zapotec.775464.wikitext
+++ b/en/z/Zapotec.775464.wikitext
@@ -48,7 +48,7 @@ From {{etyl|es|en}} ''[[zapoteca]]'', from {{etyl|nah|en}} ''[[Tzapotēcah]]'', 
 {{trans-bottom}}
 
 {{checktrans-top}}
-* {{ttbc|es}}: [[zapoteco]] {{m}}, [[zapoteca]] {{f}}
+* {{ttbc|es}}: {{t|es|zapoteco|m}}, {{t|es|zapoteca|f}}
 {{trans-bottom}}
 
 [[ru:Zapotec]]
