--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -110,6 +110,9 @@ From {{etyl|enm|en}} {{term|lether|lang=enm}}, from {{etyl|ang|en}} {{term|leþe
 {{en-adj|-}}
 
 # Made of leather.
+#*{{quote-book|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
+|title={{w|The Celebrity}}|chapter=2
+|passage=Sunning himself on the board steps, I saw for the first time Mr. Farquhar Fenelon Cooke.{{...}}A silver snaffle on a heavy '''leather''' watch guard which connected the pockets of his corduroy waistcoat, together with a huge gold stirrup in his Ascot tie, sufficiently proclaimed his tastes.}}
 # Referring to one who wears leather clothing (motorcycle jacket, chaps over 501 jeans, boots), especially as a sign of sadomasochistic homosexuality.
 
 ====Translations====
