--- a/en/g/grognard.855664.wikitext
+++ b/en/g/grognard.855664.wikitext
@@ -10,7 +10,7 @@ From {{etyl|fr|en}} {{term|grognard||lang=fr|old soldier}}
 # {{context|games|slang|lang=en}} Someone who [[enjoys]] playing [[board]] [[wargames]], particularly the counter-heavy strategy board wargames from the 1970s and 1980s.
 # {{context|games|slang|lang=en}} Someone who [[enjoys]] playing [[previous]] [[edition|editions]] of [[roleplaying game|roleplaying games]] when new editions of the game are available.
 #*“James is such a ''grognard'', he only plays the original edition of Dungeons and Dragons.”
-# {{context|computer games|slang|lang=en}} Inside the [[computer]] game development industry, a game [[fan]] who will buy every game released in a certain [[genre]] of computer game ([[RTS]], or computer role-playing game, etc.).
+# {{rfv-sense}} {{context|computer games|slang|lang=en}} Inside the [[computer]] game development industry, a game [[fan]] who will buy every game released in a certain [[genre]] of computer game ([[RTS]], or computer role-playing game, etc.).
 
 ----
 
