Fixing translation table to use {{t}} ([[User:Kephir/gadgets/xte|assisted]]) — please review: "Sami" <dormouse#22496981>

--- a/en/d/dormouse.8238.wikitext
+++ b/en/d/dormouse.8238.wikitext
@@ -61,7 +61,7 @@ From {{etyl|enm|en}} {{term|dormous|lang=enm}}, of uncertain origin. Possibly fr
 * Romanian: {{t-|ro|șoarece de pădure}}
 * Romansch: {{t-|rm|durmigliet}}
 * Russian: {{t+|ru|соня|f|tr=sónja|sc=Cyrl}}
-* Sami: [[hásselsáhpán]]
+* {{ttbc|Sami}}<!-- should be in a sub-item -->: [[hásselsáhpán]]
 * Sardinian: {{t-|sc|topi de venadroxu}}, {{t-|sc|medrona de tzirva}}
 * Scottish Gaelic: {{t-|gd|dallag|f}}
 * Serbo-Croatian:
