--- a/en/d/division.26256.wikitext
+++ b/en/d/division.26256.wikitext
@@ -3,7 +3,7 @@
 {{wikipedia}}
 
 ===Etymology===
-From {{etyl|la|en}} {{term|divisio|lang=la}}, noun of process form from perfect passive participle {{term|divisus||divided|lang=la}}, from {{term/t|la|dīvidō||divide}}
+From {{etyl|fro|en}} {{term|division|lang=fro}}, from {{etyl|la|en}} {{term|divisio|lang=la}}, noun of process form from perfect passive participle {{term|divisus||divided|lang=la}}, from {{term/t|la|dīvidō||divide}}
 
 ===Pronunciation===
 * {{IPA|/dɪˈvɪʒən/}}, {{X-SAMPA|/dI"vIZ@n/}}
