--- a/en/2/2 Samuel.801688.wikitext
+++ b/en/2/2 Samuel.801688.wikitext
@@ -14,7 +14,7 @@
 ====Translations====
 {{trans-top|book of the Bible}}
 * German: {{t-|de|2 Samuel}}
-* Greek: {{t-|el|Β' Σαμουήλ||tr=B' Samouíl|sc=Grek}}
+* Greek: {{t-|el|Β' Σαμουήλ}}
 {{trans-mid}}
 * Japanese: {{t-|ja|サムエル記下|tr=samueru kige|sc=Jpan}}
 {{trans-bottom}}
