--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -102,7 +102,7 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * Asturian: {{t+|ast|simple}}, {{t+|ast|cenciellu}}
 * {{trreq|ay}}
 * {{trreq|az}}
-* {{trreq|ba}}
+* Bashkir: {{tø|ba|ябай|sc=Cyrl}}
 * {{trreq|eu}}
 * {{trreq|be}}
 * {{trreq|bn}}
