t+com:[[mupitsʉ]] ([[WT:EDIT|Assisted]]) <rabbit#22660591>

--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -68,6 +68,7 @@ From {{etyl|enm|en}} {{term|rabet|lang=enm}}, from {{etyl|frm|en}} dialect (comp
 * Chickasaw: {{tø|cic|chokfi}}
 * Chinese:
 *: Mandarin: {{t|cmn|兔子|tr=tùzi|sc=Hani}}, {{qualifier|white rabbit}} {{t|cmn|白兔|tr=báitù|sc=Hani}}
+* Comanche: {{tø|com|mupitsʉ}}
 * Czech: {{t+|cs|králík|m}}
 * Danish: {{t+|da|kanin|c}}
 * Dena'ina: {{tø|tfn|hvaya}}
