/* Adjective */ # {{context|dated|lang=en}} [[constipated]]; [[costive]]  W1913 <bound#22672990>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -40,6 +40,7 @@ See [[bind]]
 #: {{usex|lang=en|They were '''bound''' to come into conflict eventually.}}
 # {{context|linguistics|of a [[morpheme]]|lang=en}} That cannot stand alone as a free word.
 # {{context|mathematics|logic|of a [[variable]]|lang=en}} [[constrained|Constrained]] by a [[quantifier]].
+# {{context|dated|lang=en}} [[constipated]]; [[costive]]
 
 =====Antonyms=====
 * {{sense|logic: constrained by a quantifier}} [[free]]
