--- a/en/m/moonstruck.720222.wikitext
+++ b/en/m/moonstruck.720222.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{compound|moon|struck}}
+{{compound|moon|struck}}.
 
 ===Adjective===
 {{en-adj}}
@@ -10,13 +10,28 @@
 # {{context|by extension|lang=en}} Showing [[irrational]] behaviour, especially of a [[romantic]] or [[sentimental]] nature.
 # {{context|obsolete|lang=en}} Made sick, or (like fishes) unsuitable for food, by the supposed [[influence]] of the Moon.
 
-{{Webster 1913}}
-
 ====Synonyms====
 * [[moonstricken]]
 
 ====Translations====
-* German: {{t+|de|mondsüchtig}}
+{{trans-top|}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{trans-top|}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{checktrans-top}}
+* {{ttbc|de}}: {{t+|de|mondsüchtig}}
+{{trans-mid}}
+{{trans-bottom}}
+
+{{Webster 1913}}
 
 [[et:moonstruck]]
 [[ml:moonstruck]]
