--- a/en/m/moonstruck.720222.wikitext
+++ b/en/m/moonstruck.720222.wikitext
@@ -6,7 +6,7 @@
 ===Adjective===
 {{en-adj}}
 
-# {{context|obsolete|lang=en}} [[crazy]] or [[insane]] when affected by the [[phase]]s of the [[Moon]].
+# {{context|obsolete|lang=en}} [[crazy|Crazy]] or [[insane]] when affected by the [[phase]]s of the [[Moon]].
 # {{context|by extension|lang=en}} Showing [[irrational]] behaviour, especially of a [[romantic]] or [[sentimental]] nature.
 # {{context|obsolete|lang=en}} Made sick, or (like fishes) unsuitable for food, by the supposed [[influence]] of the Moon.
 
