--- a/en/b/badger.8231.wikitext
+++ b/en/b/badger.8231.wikitext
@@ -17,7 +17,7 @@ From {{etyl|enm|en}} {{term|bageard||marked by a badge|lang=enm}}, from {{term|b
 {{en-noun}}
 
 # A common name for any [[mammal]] of three subfamilies, which belong to the family [[Mustelidae]]: [[Melinae]] (Eurasian badgers), [[Mellivorinae]] ([[ratel]] or [[honey badger]]), and ''{{taxlink|Taxideinae|subfamily}}'' ([[American badger]]).
-# A [[native]] or [[resident]] of the American State of [[Wisconsin]].
+# A [[native]] or [[resident]] of the American state, [[Wisconsin]].
 # {{context|obsolete|lang=en}} A brush made of badger hair.
 # {{context|in the plural|obsolete|vulgar|cant|lang=en}} A crew of desperate [[villain]]s who robbed near rivers, into which they threw the bodies of those they murdered.
 
