--- a/en/c/cauliflower.34088.wikitext
+++ b/en/c/cauliflower.34088.wikitext
@@ -15,8 +15,8 @@
 ===Noun===
 {{en-noun}}
 
-# An annual variety of ''[[Brassica oleracea]]'', or [[cabbage]], of which the cluster of young flower stalks and buds is eaten as a vegetable.
-# The edible head or “curd” of a cauliflower plant.
+# {{taxlink|Brassica oleracea var. botrytis|variety}}, an annual variety of [[cabbage]], of which the cluster of young flower stalks and buds is eaten as a vegetable.
+# The edible head or [[curd]] of a cauliflower plant.
 
 ====Derived terms====
 * [[broccoflower]]
