--- a/en/o/oozes.802729.wikitext
+++ b/en/o/oozes.802729.wikitext
@@ -3,14 +3,14 @@
 ===Etymology 1===
 
 ====Verb====
-{{head|{{safesubst:langrev/=Etymology 1=}}}}
+{{head|en}}
 
 # {{en-third-person singular of|ooze}}
 
 ===Etymology 2===
 
 ====Noun====
-{{head|{{safesubst:langrev/=Etymology 2=}}}}
+{{head|en}}
 
 # {{plural of|ooze}}
 
