#* Shakespeare  #*: a most poor man, made tame to fortune's '''blows'''  # A sudden or forcible act or effort; an assault.  #* T. Arnold  #*: A vigorous '''blow''' might win [Hanno's camp]. <blow#22748003>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -382,9 +382,14 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 
 # The act of [[striking]] or [[hit]]ting.<!--1-->
 #: ''A fabricator is used to direct a sharp '''blow''' to the surface of the stone.''
-#: ''During an exchange to end round 13, Duran landed a '''blow''' to the mid-section.''
-# An [[unfortunate]] [[occurrence]].<!--2-->
+#: ''During an exchange to end round 13, Duran landed a '''blow''' to the midsection.''
+# A sudden or forcible act or effort; an assault.
+#* T. Arnold
+#*: A vigorous '''blow''' might win [Hanno's camp].
+# A [[damaging]] [[occurrence]].<!--2-->
 #: ''A further '''blow''' to the group came in 1917 when Thomson died while canoeing in Algonquin Park.''
+#* Shakespeare
+#*: a most poor man, made tame to fortune's '''blows'''
 #* {{quote-news
 |year=2011
 |date=April 15
@@ -397,7 +402,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 
 =====Synonyms=====
 * {{sense|The act of striking}} [[strike]], [[hit]], [[punch]]
-* {{sense|An unfortunate occurrence}} [[disaster]], [[calamity]]
+* {{sense|A damaging occurrence}} [[disaster]], [[calamity]]
 
 =====Derived terms=====
 {{rel-top3|terms derived from ''blow'' (noun)}}
@@ -410,7 +415,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 {{rel-bottom}}
 
 =====Translations=====
-{{trans-top| act of striking or hitting}}
+{{trans-top|act of striking or hitting}}
 * Armenian: {{t-|hy|հարված|tr=harvaç}}
 * Bulgarian: {{t+|bg|удар|m}}
 * Dutch: {{t+|nl|slag|m}}
@@ -434,7 +439,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 * Telugu: [[దెబ్బ]]
 {{trans-bottom}}
 
-{{trans-top|unfortunate occurrence}}
+{{trans-top|damaging occurrence}}
 * Armenian: {{t-|hy|հարված|tr=harvaç}}
 * Dutch: {{t+|nl|slag|m}}, {{t+|nl|tegenslag|m}}
 * Finnish: {{t-|fi|takaisku}}, {{t+|fi|isku}}
