--- a/en/q/quack.4311.wikitext
+++ b/en/q/quack.4311.wikitext
@@ -28,6 +28,7 @@ From {{etyl|enm|en}} *{{term||quacken|lang=enm}}, {{term|queken||to croak like a
 * Hungarian: {{t-|hu|háp}}
 {{trans-mid}}
 * Icelandic: {{t-|is|andagagg|n}}, {{t-|is|guss|n}}
+* Irish: {{t-|ga|vrác|n}}
 * Italian: [[qua qua]] {{g|m}}
 * Japanese: {{t-|ja|ガー ガー|tr=gā-gā}}, {{t-|ja|クェッ クェッ|tr=quek-quek}}, {{t-|ja|クワッ クワッ|tr=quwak-quwak}}
 * Macedonian: {{t-|mk|квак|tr=kvák}}
