--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -34,9 +34,9 @@ From {{etyl|enm|en}} {{term/t|enm|plege}}, from {{etyl|xno|en}} {{term/t|fro|ple
 * German: {{t-|de|zusichern}}, {{t+|de|versprechen}}
 * {{trreq|he}}
 * {{trreq|is}}
-{{trans-mid}}
 * Italian: {{t+|it|promettere}}, {{t+|it|impegnarsi}}
-* Japanese: {{t-|ja|公約する|tr=kōyaku suru}}
+* Japanese: {{t|ja|公約|tr=kōyaku suru|alt=公約する}}
+{{trans-mid}}
 * {{trreq|ko}}
 * Latin: {{t-|la|spondere}}, {{t-|la|vovere}}
 * Malay: {{t-|ms|ikrar}}
@@ -62,7 +62,7 @@ From {{etyl|enm|en}} {{term/t|enm|plege}}, from {{etyl|xno|en}} {{term/t|fro|ple
 * German: {{t+|de|verpfänden}}
 {{trans-mid}}
 * Polish: {{t-|pl|złożyć zastaw}}
-* {{ttbc|ru}}: {{t|ru|[[отдавать]] в [[залог]]|impf|tr=otdavátʹ v zalóg|sc=Cyrl}}, {{t|ru|[[отдать]] в [[залог]]|pf|tr=otdátʹ v zalóg|sc=Cyrl}}, {{t+|ru|закладывать|impf|tr=zakládyvatʹ|sc=Cyrl}}, {{t+|ru|заложить|pf|tr=založítʹ|sc=Cyrl}}
+* Russian: {{t|ru|[[отдавать]] в [[залог]]|impf|tr=otdavátʹ v zalóg|sc=Cyrl}}, {{t|ru|[[отдать]] в [[залог]]|pf|tr=otdátʹ v zalóg|sc=Cyrl}}, {{t+|ru|закладывать|impf|tr=zakládyvatʹ|sc=Cyrl}}, {{t+|ru|заложить|pf|tr=založítʹ|sc=Cyrl}}
 * Slovene: {{t-|sl|zastaviti}}
 * Spanish: {{t+|es|hipotecar}}, {{t+|es|empeñar}}
 {{trans-bottom}}
@@ -105,7 +105,7 @@ From {{etyl|enm|en}} {{term/t|enm|plege}}, from {{etyl|xno|en}} {{term/t|fro|ple
 * Polish: {{t+|pl|obietnica|f}}
 * Portuguese: {{t+|pt|promessa|f}}, {{t+|pt|penhor|m}}
 * Romanian: {{t+|ro|legământ}}, {{t-|ro|promisiune}} (''fermă'')
-* Russian: {{t+|ru|обет|m}}, {{t+|ru|обещание|n}}, {{t+|ru|зарок|m}}
+* Russian: {{t+|ru|обет|m|tr=obét}}, {{t+|ru|обещание|n|tr=obeščánije}}, {{t+|ru|зарок|m|tr=zarók}}
 * Scottish Gaelic: {{t-|gd|gealltanas|m}}
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|за́вет|m}}
