--- a/en/m/multicolor.34078.wikitext
+++ b/en/m/multicolor.34078.wikitext
@@ -47,7 +47,7 @@ From {{term|multus||much, many|lang=la}} + {{term|color||color|lang=la}}.
 # {{context|substantive|lang=la}} A multicolored [[garment]].
 
 ====Inflection====
-{{la-decl-3rd-1E|multicolor|multicolōr}}
+{{la-decl-3rd-1E|multicolōr}}
 
 ====Synonyms====
 * {{sense|multicolored}} [[multicolorus|multicolōrus]]
