--- a/en/l/leather.4309.wikitext
+++ b/en/l/leather.4309.wikitext
@@ -125,12 +125,12 @@ From {{etyl|enm|en}} {{term|lether|lang=enm}}, from {{etyl|ang|en}} {{term|leþe
 * Dutch: {{t+|nl|leren}}
 * Esperanto: {{t-|eo|leda}}
 * Faroese: {{t-|fo|leður-}}
-* Finnish: [[nahka]]-, [[nahkainen]]
+* {{ttbc|fi}}: {{t|fi|nahka|alt=nahka-}} <!-- was "[[nahka]]-" - assumed inflected form or vocalised spelling; please verify if linking is acceptable. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->, {{t|fi|nahkainen}}
 * Lithuanian: {{t-|lt|odinis}}
 * Persian: {{t+|fa|چرمی|tr=charmi}}
 * Polish: {{t+|pl|skórzany}}
 {{trans-mid}}
-* Romanian: din [[piele]] (fabricat)
+* {{ttbc|ro}}: {{qualifier|fabricat}} {{t|ro|piele|alt=din piele}} <!-- was "din [[piele]]" - assumed inflected form or vocalised spelling; please verify if linking is acceptable. see [[User:Kephir/gadgets/xte#Translation_fixing]] -->
 * Russian: {{t+|ru|кожаный|tr=kóžanyj}}
 * Serbo-Croatian:
 *: Cyrillic: {{t-|sh|кожни|m}}
