# The act of breaking, or state of being broken, especially by violence.  #* Foxe  #*: Neither can the natural body of Christ be subject to any '''fraction''' or breaking up. <fraction#22917258>

--- a/en/f/fraction.34055.wikitext
+++ b/en/f/fraction.34055.wikitext
@@ -23,6 +23,9 @@ From {{etyl|enm|en}} {{term|fraccioun||a breaking|lang=enm}}, from {{etyl|xno|en
 #* {{quote-news|year=2011|date=January 29|author=Chris Bevan|work=BBC
 |title=[http://news.bbc.co.uk/sport2/hi/football/fa_cup/9379079.stm Torquay 0-1 Crawley Town]
 |passage=After kick-off was delayed because of crowd congestion, Torquay went closest to scoring in a cagey opening 30 minutes, when Danny Stevens saw a fierce shot from the edge of the area swerve a '''fraction''' wide.}}
+# The act of breaking, or state of being broken, especially by violence.
+#* Foxe
+#*: Neither can the natural body of Christ be subject to any '''fraction''' or breaking up.
 
 ====Quotations====
 * {{seeCites}}
