--- a/en/r/reanimation.741524.wikitext
+++ b/en/r/reanimation.741524.wikitext
@@ -9,6 +9,12 @@
 
 # The act of [[reanimate|reanimating]]; a second or subsequent [[animation]].
 
+====Translations====
+{{trans-top|act of reanimating}}
+{{trans-mid}}
+* Russian: {{t|ru|реанимация|f|alt=реанима́ция|sc=Cyrl}}
+{{trans-bottom}}
+
 [[et:reanimation]]
 [[pl:reanimation]]
 [[ru:reanimation]]
