--- a/en/r/reanimation.741524.wikitext
+++ b/en/r/reanimation.741524.wikitext
@@ -11,6 +11,8 @@
 
 ====Translations====
 {{trans-top|act of reanimating}}
+* French: {{t|fr|réanimation|f}}
+* German: {{t|de|Reanimation|f}}
 {{trans-mid}}
 * Russian: {{t|ru|реанимация|f|alt=реанима́ция|sc=Cyrl}}
 {{trans-bottom}}
