--- a/en/m/maximum.34063.wikitext
+++ b/en/m/maximum.34063.wikitext
@@ -47,7 +47,7 @@ French from {{etyl|la|en}} ''[[#Latin|maximum]]''.
 {{trans-mid}}
 * Latin: {{t-|la|maximum}}
 * Malay: {{t-|ms|maksimum}}
-* Persian: {{t+|fa|بیشینه|tr=bišine|sc=fa-Arab}}, {{t-|fa|ماکزیمم|tr=mâkzimom|sc=fa-Arab}}
+* Persian: {{t+|fa|بیشینه|tr=bišine|sc=fa-Arab}}, {{t-|fa|ماکسیمم|tr=mâksimom|sc=fa-Arab}}
 * Portuguese: {{t+|pt|máximo|m}}
 * Romanian: {{t-|ro|maximum}}
 * Russian: {{t+|ru|максимум|m|tr=máksimum}}
