--- a/en/w/wassen.4471.wikitext
+++ b/en/w/wassen.4471.wikitext
@@ -61,6 +61,21 @@ From {{etyl|dum|nl}} {{term|wassen|lang=dum}}, from {{etyl|odt|nl}} {{term|wahsa
 =====Conjugation=====
 {{nl-conj-wk|was|wasse}}
 
+----
+
+==Low German==
+
+===Etymology===
+From {{etyl|osx|nds}} {{term|wahsan|lang=osx}}, from {{etyl|gem-pro|nds}} {{term/t|gem-pro|*wahsaną}}.
+
+===Verb===
+{{head|nds|verb}}
+
+# to [[wax]], [[grow]]
+
+====Conjugation====
+{{nds-conj-st|wass|wass|wuss|wuss|wuss}}
+
 [[el:wassen]]
 [[eu:wassen]]
 [[fr:wassen]]
