/* Noun */ # A [[traditional]] [[character]] in [[British]] [[pantomime]], a [[melodramatic]] [[female]] often played by a man in [[drag]]. <dame#22972072>

--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -15,6 +15,7 @@
 #: '''''Dame''' Edith Sitwell''
 # {{context|informal|slightly|derogatory|US|lang=en}} A woman.
 #: ''There ain't nothin' like a '''dame'''!''
+# A [[traditional]] [[character]] in [[British]] [[pantomime]], a [[melodramatic]] [[female]] often played by a man in [[drag]].
 # {{context|archaic|lang=en}} {{l/en|lady|Lady}}, woman.
 
 ====Synonyms====
