/* Noun */ Quote added <thing#23061175>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -22,7 +22,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 # A [[word]], [[symbol]], [[sign]], or other [[referent]] that can be used to refer to any entity.
 # An individual object or distinct entity.
 # {{context|informal|lang=en}} Something that is normal or generally recognised.
-#: ''Bacon pie? Is that a '''thing'''?''
+#: {{usex|lang=en|Bacon pie? Is that a '''thing'''?}}
 # {{context|legal|lang=en}} Whatever can be [[own]]ed.
 # The [[latest]] [[fad]] or [[fashion]].
 # {{context|in the plural|lang=en}} [[clothes|Clothes]], [[possessions]] or [[equipment]].
@@ -32,6 +32,9 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 #: {{usex|lang=en|The car looks cheap, but the '''thing''' is, I have doubts about its safety.}}
 # {{context|slang|lang=en}} A [[penis]].
 # A [[living]] being or creature.
+#*{{quote-magazine|date=2013-08-03|volume=408|issue=8847|magazine={{w|The Economist}}
+|title=[http://www.economist.com/news/finance-and-economics/21582512-explosion-start-ups-changing-finance-better-revenge-nerds Revenge of the nerds]
+|passage=Think of banking today and the image is of grey-suited men in towering skyscrapers. Its future, however, is being shaped in converted warehouses and funky offices in San Francisco, New York and London, where bright young '''things''' in jeans and T-shirts huddle around laptops, sipping lattes or munching on free food.}}
 #: {{usex|lang=en|you poor '''thing''';&nbsp; she's a funny old '''thing''', but her heart's in the right place;&nbsp; I met a pretty blond '''thing''' at the bar}}
 # That which matters; the [[crux]].
 #: {{usex|lang=en|that's the '''thing''': we don't know where he went;&nbsp; the '''thing''' is, I don't have any money}}
