--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -211,6 +211,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 
 {{trans-top|to blow a musical instrument to make it give a sound}} <!--5-->
 * Finnish: {{t+|fi|soittaa}}, {{t+|fi|puhaltaa}}
+* French: {{t-|fr|jouer}}, {{t+|fr|souffler|alt=souffler (dans)}}
 * Irish: {{t-|ga|séid}}
 {{trans-mid}}
 * Romanian: {{t-|ro|cânta la un instrument}}
