--- a/en/i/in one's right mind.775705.wikitext
+++ b/en/i/in one's right mind.775705.wikitext
@@ -24,5 +24,5 @@
 {{trans-top|sane}}
 * Finnish: {{t|fi|järjissään}} 
 {{trans-mid}}
-* {{ttbc|ru}}: {{t|ru|в здра́вом уме́|sc=Cyrl}} {{qualifier|in healthy/sound mind}}, {{t|ru|в своём уме́|sc=Cyrl}} {{qualifier|in one's (own) mind}}
+* Russian: {{t|ru|в здра́вом уме́|sc=Cyrl}} {{qualifier|in healthy/sound mind}}, {{t|ru|в своём уме́|sc=Cyrl}} {{qualifier|in one's (own) mind}}
 {{trans-bottom}}
