--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -40,7 +40,7 @@ Abbreviation of various terms and phrases.
 # [[creative director|Creative director]]: head of the creative department (for example of an advertising agency).
 # [[corporate design|Corporate design]]: specific design features of a company, corporate identity [[CI]]. {{rfc-sense}}
 # [[collision detection|Collision detection]] {{qualifier|used by an Ethernet network to detect when two computers are sending frames at the same time, and also to deal with such collisions when they happen}}.
-# [[circular dichroism|Circular Dichroism]].
+# [[circular dichroism|Circular dichroism]].
 
 ====Translations====
 {{trans-top|abbreviations of compact-disc which are actually in use; for the full term's translations, see "[[compact disc]]"}}
