--- a/en/c/CD.26224.wikitext
+++ b/en/c/CD.26224.wikitext
@@ -68,7 +68,7 @@ Abbreviation of various terms and phrases.
 {{trans-bottom}}
 
 ===Verb===
-{{head|en|verb}}
+{{en-verb}}
 
 # To [[cross-dress]].
 #* '''1993''' January 5, "Tierney Dhewitrei" (username), ''about me, is it familiar?'', in <tt>alt.transgendered</tt>, ''Usenet'':
