# To lose sap, gum, or juice.  #: ''A tree or a vine '''bleeds''' when tapped or wounded.''  # To issue forth, or drop, like blood from an incision.  #* Alexander Pope  #*: For me the balm shall '''bleed'''. <bleed#23216281>

--- a/en/b/bleed.6801.wikitext
+++ b/en/b/bleed.6801.wikitext
@@ -24,6 +24,11 @@ From {{etyl|ang|en}} {{term/t|ang|blēdan}}, from {{etyl|gem-pro|en}} {{term/t|g
 #*: And so Sir Trystrames '''bledde''' bothe the over-shete and the neyther-shete, and the pylowes and the hede-shete.
 # {{context|intransitive|copulative|lang=en}} To show one's group loyalty by showing (its associated color) in one's blood.
 #: ''He was a devoted Vikings fan: he '''bled''' purple.''
+# To lose sap, gum, or juice.
+#: ''A tree or a vine '''bleeds''' when tapped or wounded.''
+# To issue forth, or drop, like blood from an incision.
+#* Alexander Pope
+#*: For me the balm shall '''bleed'''.
 
 ====Derived terms====
 * [[bleed dry]]
