--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -242,7 +242,7 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 ===Noun===
 {{en-noun}}
 
-# {{context|medicine|lang=en}} A preparation made from one plant, as opposed to something made from more than one plant.
+# {{context|medicine|lang=en}} extraordinary.
 #* '''1603''', {{w|John Florio}}, translating Michel de Montaigne, ''Essays'', II.37:
 #*: I know there are some '''simples''', which in operation are moistning and some drying.
 #* Sir W. Temple
