--- a/en/s/species.4327.wikitext
+++ b/en/s/species.4327.wikitext
@@ -91,7 +91,7 @@ From {{etyl|la|en}} {{term|speciēs||appearance; quality|lang=la}}, from {{term|
 * Danish: {{t+|da|art|c}}
 * Finnish: {{t+|fi|laji}}
 * French: {{t+|fr|espèce|f}}
-* German: {{t+|de|Gattung|f}}
+* German: {{t|de|Art|f}}
 * Khmer: {{t+|km|ប្រភេទ|tr=prɑpʰeit|sc=Khmr}}
 {{trans-mid}}
 * Macedonian: {{t-|mk|вид|m|tr=vid|sc=Cyrl}}
