--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -270,6 +270,7 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 ====Derived terms====
 * [[simpler]]
 * [[simplist]]
+* [[simplify]]
 
 ===Statistics===
 * {{rank|smile|walk|places|709|simple|fresh|noble|appearance}}
