/* Translations */ check el <thing#23322721>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -205,6 +205,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 
 {{trans-top|living being or creature}}
 * Finnish: {{t+|fi|olento}}
+* Greek: {{t+|el|πλάσμα|n}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|teremtés}}, {{t+|hu|lény}}
 {{trans-bottom}}
