--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -35,7 +35,7 @@ Partly imitative, also influenced by {{term|burble}}.
 |passage=Thomas, so often West Brom's most positive attacker down their left side and up against Salgado, twice almost burst the '''bubble''' of excitement around the ground but he had two efforts superbly saved by Robinson.}}
 # {{context|figuratively|lang=en}} a feverish surge of speculation in a financial market, usually followed by a [[market]] [[crash]] (eg the [[w:South Sea Bubble|South Sea Bubble]]).
 # {{context|Cockney rhyming slang|lang=en}} a [[Greek]] (''also:'' [[bubble and squeak]])
-# {{context|figurative|lang=en}} emotional or\and physical atmosphere in which the subject is immersed; circumstances, ambience
+# {{context|figurative|lang=en}} The emotional and/or physical atmosphere in which the subject is immersed; circumstances, ambience
 #* {{quote-news
 |year=2012
 |date=June 3
