--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -183,7 +183,7 @@ From {{etyl|sla-pro|sl}} {{term/t|sla-pro|*syrъ}}.
 # [[cheese]]
 
 ====Declension====
-{{sl-decl-noun-m|sìr}}
+{{sl-decl-noun-m|sìr|sír}}
 
 [[Category:sl:Cheeses]]
 
