t+be:[[про́сты]] t+uk:[[про́стий]] t+mk:[[едно́ставен]] t+mk:[[прост]] t+sk:[[jednoduchý]] t+sk:[[prostý]] t+sk:[[ľahký]] t+uk:[[ле́гкий]] t+be:[[лёгкі]] t+pl:[[lekki]] t+cs:[[lehký]] t+az:[[sadə]] ([[WT... <simple#23389888>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -101,10 +101,10 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * {{trreq|as}}
 * Asturian: {{t+|ast|simple}}, {{t+|ast|cenciellu}}
 * {{trreq|ay}}
-* {{trreq|az}}
+* Azeri: {{t-|az|sadə}}
 * Bashkir: {{tø|ba|ябай|sc=Cyrl}}
 * {{trreq|eu}}
-* {{trreq|be}}
+* Belarusian: {{t-|be|про́сты|sc=Cyrl}}, {{t-|be|лёгкі|sc=Cyrl}} {{qualifier|easy}}
 * {{trreq|bn}}
 * {{trreq|br}}
 * Bulgarian: {{t+|bg|прост|m|tr=prost}}
@@ -115,7 +115,7 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * Chinese:
 *: Mandarin: {{t|cmn|簡單|sc=Hani}}, {{t|cmn|简单|tr=jiǎndān|sc=Hani}}, {{qualifier|easy}} {{t|cmn|容易|tr=róngyì|sc=Hani}}
 * {{trreq|co}}
-* Czech: {{t+|cs|jednoduchý|m}}
+* Czech: {{t+|cs|jednoduchý|m}}, {{t-|cs|lehký}} {{qualifier|easy}}
 * {{trreq|da}}
 * {{trreq|dv}}
 * Dutch: {{t+|nl|eenvoudig}}, {{t+|nl|simpel}}
@@ -164,7 +164,7 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * Lojban: {{t-|jbo|sampu}}
 * {{trreq|lg}}
 * {{trreq|lb}}
-* {{trreq|mk}}
+* Macedonian: {{t-|mk|едно́ставен|sc=Cyrl}}, {{t-|mk|прост|sc=Cyrl}}
 * Malay: {{t-|ms|mudah}}
 * {{trreq|ml}}
 * Manx: {{t-|gv|oney}}, {{t-|gv|macaintagh}}, {{t-|gv|neuchialgagh}}
@@ -177,7 +177,7 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * Oriya: {{t-|or|ସରଳ|sc=Orya}}
 * {{trreq|ps}}
 * Persian: {{t+|fa|ساده|sc=fa-Arab}}
-* Polish: {{t+|pl|prosty|m}}, {{t+|pl|łatwy|m}}
+* Polish: {{t+|pl|prosty|m}}, {{t+|pl|łatwy|m}}, {{t-|pl|lekki}} {{qualifier|easy}}
 * Portuguese: {{t+|pt|simples}}
 * {{trreq|pa}}
 * {{trreq|raj}}
@@ -193,7 +193,7 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * Silesian: {{tø|szl|ajnfachowy}}
 * {{trreq|sd}}
 * {{trreq|si}}
-* {{trreq|sk}}
+* Slovak: {{t-|sk|jednoduchý}}, {{t-|sk|prostý}}, {{t-|sk|ľahký}} {{qualifier|easy}}
 * Slovene: {{t-|sl|preprost}}, {{t-|sl|enostaven}}
 * {{trreq|so}}
 * Spanish: {{t+|es|simple}}, {{t+|es|sencillo}}
@@ -203,7 +203,7 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * Thai: {{t+|th|ง่าย|tr=ngâai|sc=Thai}}
 * Turkish: {{t+|tr|basit}}, {{t+|tr|sade}}
 * {{trreq|tk}}
-* Ukrainian: {{t+|uk|простий|tr=prostýj|sc=Cyrl}}
+* Ukrainian: {{t+|uk|простий|tr=prostýj|sc=Cyrl}}, {{t-|uk|про́стий|sc=Cyrl}}, {{t-|uk|ле́гкий|sc=Cyrl}} {{qualifier|easy}}
 * Urdu: {{qualifier|easy}} {{t+|ur|آسان|tr=āsān|sc=ur-Arab}}
 * {{trreq|ug}}
 * {{trreq|uz}}
