--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -115,7 +115,7 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * Chinese:
 *: Mandarin: {{t|cmn|簡單|sc=Hani}}, {{t|cmn|简单|tr=jiǎndān|sc=Hani}}, {{qualifier|easy}} {{t|cmn|容易|tr=róngyì|sc=Hani}}
 * {{trreq|co}}
-* Czech: {{t+|cs|jednoduchý|m}}, {{t-|cs|lehký}} {{qualifier|easy}}, {{t-|cs|prostý}}
+* Czech: {{t+|cs|jednoduchý|m}}, {{t-|cs|prostý}}, {{t-|cs|lehký}} {{qualifier|easy}}
 * {{trreq|da}}
 * {{trreq|dv}}
 * Dutch: {{t+|nl|eenvoudig}}, {{t+|nl|simpel}}
@@ -176,7 +176,7 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * {{trreq|ang}}
 * Oriya: {{t-|or|ସରଳ|sc=Orya}}
 * {{trreq|ps}}
-* Persian: {{t+|fa|ساده|sc=fa-Arab}}
+* Persian: {{t+|fa|ساده|tr=sâde|sc=fa-Arab}}
 * Polish: {{t+|pl|prosty|m}}, {{t+|pl|łatwy|m}}, {{t-|pl|lekki}} {{qualifier|easy}}
 * Portuguese: {{t+|pt|simples}}
 * {{trreq|pa}}
@@ -203,7 +203,7 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * Thai: {{t+|th|ง่าย|tr=ngâai|sc=Thai}}
 * Turkish: {{t+|tr|basit}}, {{t+|tr|sade}}
 * {{trreq|tk}}
-* Ukrainian: {{t+|uk|простий|tr=prostýj|sc=Cyrl}}, {{t-|uk|про́стий|sc=Cyrl}}, {{t-|uk|ле́гкий|sc=Cyrl}} {{qualifier|easy}}
+* Ukrainian: {{t+|uk|про́стий|sc=Cyrl}}, {{t-|uk|ле́гкий|sc=Cyrl}} {{qualifier|easy}}
 * Urdu: {{qualifier|easy}} {{t+|ur|آسان|tr=āsān|sc=ur-Arab}}
 * {{trreq|ug}}
 * {{trreq|uz}}
