--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -154,9 +154,9 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * {{trreq|rw}}
 * {{trreq|rn}}
 * Korean: {{t-|ko|간단한|tr=gandan-han|sc=Kore}} ({{t+|ko|簡單|sc=Kore}} + {{t+|ko|한|sc=Kore}}), {{qualifier|predicate}} {{t+|ko|간단하다|tr=gandan-hada|sc=Kore}}
-{{trans-mid}}
 * Kurdish:
 *: Sorani: {{t+|ku|ئاسان|tr=AsAn|sc=ku-Arab}}, {{t+|ku|ساکار|tr=sAkAr|sc=ku-Arab}}
+{{trans-mid}}
 * {{trreq|lo}}
 * Latin: {{t+|la|simplex}}
 * Latvian: {{t-|lv|prasts}}, {{t-|lv|vienkāršs}}
@@ -198,6 +198,7 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * {{trreq|so}}
 * Spanish: {{t+|es|simple}}, {{t+|es|sencillo}}
 * Swedish: {{t+|sv|enkel}}, {{t+|sv|simpel}}
+* Tajik: {{t-|tg|сода|sc=Cyrl}}
 * Tamil: {{t+|ta|எளிய|tr=eḷiya}}, {{t+|ta|எளிது|tr=eḷitu}}, {{t-|ta|எளிமையான|tr=eḷimaiyāṉa}}
 * Telugu: {{t+|te|సరళమైన|tr=saraḷamaina|sc=Telu}}
 * Thai: {{t+|th|ง่าย|tr=ngâai|sc=Thai}}
