--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -154,10 +154,10 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * {{trreq|rw}}
 * {{trreq|rn}}
 * Korean: {{t-|ko|간단한|tr=gandan-han|sc=Kore}} ({{t+|ko|簡單|sc=Kore}} + {{t+|ko|한|sc=Kore}}), {{qualifier|predicate}} {{t+|ko|간단하다|tr=gandan-hada|sc=Kore}}
+{{trans-mid}}
 * Kurdish:
 *: Sorani: {{t+|ku|ئاسان|tr=AsAn|sc=ku-Arab}}, {{t+|ku|ساکار|tr=sAkAr|sc=ku-Arab}}
-{{trans-mid}}
-* {{trreq|lo}}
+* Lao: {{t-|lo|ງ່າຍ|tr=ŋāːy|sc=Laoo}}
 * Latin: {{t+|la|simplex}}
 * Latvian: {{t-|lv|prasts}}, {{t-|lv|vienkāršs}}
 * Lithuanian: {{t+|lt|paprastas}}
