--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -101,7 +101,7 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * {{trreq|as}}
 * Asturian: {{t+|ast|simple}}, {{t+|ast|cenciellu}}
 * {{trreq|ay}}
-* Azeri: {{t-|az|sadə}}
+* Azeri: {{t-|az|sadə}}, {{t-|az|bəsit}}
 * Bashkir: {{tø|ba|ябай|sc=Cyrl}}
 * {{trreq|eu}}
 * Belarusian: {{t-|be|про́сты|sc=Cyrl}}, {{t-|be|лёгкі|sc=Cyrl}} {{qualifier|easy}}
