t+ky:[[жөнөкөй]] t+ky:[[жеңил]] t+kk:[[жеңіл]] t+tk:[[sada]] t+tk:[[ýönekeý]] t+uz:[[sodda]] t+uz:[[oson]] t-balance ([[WT:EDIT|Assisted]]) <simple#23389915>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -149,14 +149,15 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * {{trreq|jv}}
 * Jèrriais: {{tø|roa-jer|sîmpl'ye|m|f}}
 * {{trreq|kn}}
-* Kazakh: {{t|kk|қарапайым|tr=qarapayım|sc=Cyrl}}
+* Kazakh: {{t|kk|қарапайым|tr=qarapayım|sc=Cyrl}}, {{t-|kk|жеңіл|sc=Cyrl}} {{qualifier|easy}}
 * Khmer: {{t-|km|មិនពិបាក|tr=mɨn pi’baak|sc=Khmr}}
 * {{trreq|rw}}
 * {{trreq|rn}}
 * Korean: {{t-|ko|간단한|tr=gandan-han|sc=Kore}} ({{t+|ko|簡單|sc=Kore}} + {{t+|ko|한|sc=Kore}}), {{qualifier|predicate}} {{t+|ko|간단하다|tr=gandan-hada|sc=Kore}}
-{{trans-mid}}
 * Kurdish:
 *: Sorani: {{t+|ku|ئاسان|tr=AsAn|sc=ku-Arab}}, {{t+|ku|ساکار|tr=sAkAr|sc=ku-Arab}}
+{{trans-mid}}
+* Kyrgyz: {{t+|ky|жөнөкөй|sc=Cyrl}}, {{t+|ky|жеңил|sc=Cyrl}} {{qualifier|easy}}
 * Lao: {{t-|lo|ງ່າຍ|tr=ŋāːy|sc=Laoo}}
 * Latin: {{t+|la|simplex}}
 * Latvian: {{t-|lv|prasts}}, {{t-|lv|vienkāršs}}
@@ -203,11 +204,11 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * Telugu: {{t+|te|సరళమైన|tr=saraḷamaina|sc=Telu}}
 * Thai: {{t+|th|ง่าย|tr=ngâai|sc=Thai}}
 * Turkish: {{t+|tr|basit}}, {{t+|tr|sade}}
-* {{trreq|tk}}
+* Turkmen: {{t-|tk|sada}}, {{t-|tk|ýönekeý}}
 * Ukrainian: {{t+|uk|про́стий|sc=Cyrl}}, {{t-|uk|ле́гкий|sc=Cyrl}} {{qualifier|easy}}
 * Urdu: {{qualifier|easy}} {{t+|ur|آسان|tr=āsān|sc=ur-Arab}}
 * {{trreq|ug}}
-* {{trreq|uz}}
+* Uzbek: {{t-|uz|sodda}}, {{t-|uz|oson}} {{qualifier|easy}}
 * Vietnamese: {{t+|vi|giản dị}}, {{t+|vi|mộc mạc}}
 * {{trreq|vo}}
 * {{trreq|wa}}
