--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -201,6 +201,7 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * Swedish: {{t+|sv|enkel}}, {{t+|sv|simpel}}
 * Tajik: {{t-|tg|сода|sc=Cyrl}}
 * Tamil: {{t+|ta|எளிய|tr=eḷiya}}, {{t+|ta|எளிது|tr=eḷitu}}, {{t-|ta|எளிமையான|tr=eḷimaiyāṉa}}
+* Tatar: {{t-|tt|гади|sc=Cyrl}}, {{t-|tt|беркатлы|sc=Cyrl}}
 * Telugu: {{t+|te|సరళమైన|tr=saraḷamaina|sc=Telu}}
 * Thai: {{t+|th|ง่าย|tr=ngâai|sc=Thai}}
 * Turkish: {{t+|tr|basit}}, {{t+|tr|sade}}
