--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -171,6 +171,7 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * Manx: {{t-|gv|oney}}, {{t-|gv|macaintagh}}, {{t-|gv|neuchialgagh}}
 * {{trreq|mr}}
 * Mirandese: {{tø|mwl|lhano}}
+* Mongolian: {{t|mn|энгийн|sc=Cyrl}}
 * {{trreq|ne}}
 * Novial: {{tø|nov|simpli}}
 * Occitan: {{t+|oc|simple}}
