--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -93,7 +93,7 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 
 ====Translations====
 {{trans-top|uncomplicated}}
-* {{trreq|af}}
+* Afrikaans: {{t-|af|eenvoudig}}
 * Albanian: {{t+|sq|thjeshtë}}
 * Arabic: {{t+|ar|بسيط|tr=basīṭ|sc=Arab}}
 * Aragonese: {{t+|an|simple}}
@@ -140,7 +140,7 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * Icelandic: {{t+|is|einfaldur|m}}
 * Ido: {{t+|io|simpla}}
 * {{trreq|ig}}
-* {{trreq|id}}
+* Indonesian: {{t-|id|sederhana}}, {{t-|id|mudah}}
 * {{trreq|ia}}
 * {{trreq|ie}}
 * Irish: {{t-|ga|simplí}}
@@ -156,8 +156,8 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * Korean: {{t-|ko|간단한|tr=gandan-han|sc=Kore}} ({{t+|ko|簡單|sc=Kore}} + {{t+|ko|한|sc=Kore}}), {{qualifier|predicate}} {{t+|ko|간단하다|tr=gandan-hada|sc=Kore}}
 * Kurdish:
 *: Sorani: {{t+|ku|ئاسان|tr=AsAn|sc=ku-Arab}}, {{t+|ku|ساکار|tr=sAkAr|sc=ku-Arab}}
-{{trans-mid}}
 * Kyrgyz: {{t+|ky|жөнөкөй|sc=Cyrl}}, {{t+|ky|жеңил|sc=Cyrl}} {{qualifier|easy}}
+{{trans-mid}}
 * Lao: {{t-|lo|ງ່າຍ|tr=ŋāːy|sc=Laoo}}
 * Latin: {{t+|la|simplex}}
 * Latvian: {{t-|lv|prasts}}, {{t-|lv|vienkāršs}}
@@ -168,6 +168,7 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 * Macedonian: {{t-|mk|едно́ставен|sc=Cyrl}}, {{t-|mk|прост|sc=Cyrl}}
 * Malay: {{t-|ms|mudah}}
 * {{trreq|ml}}
+* Maltese: {{t-|mt|sempliċi}}
 * Manx: {{t-|gv|oney}}, {{t-|gv|macaintagh}}, {{t-|gv|neuchialgagh}}
 * {{trreq|mr}}
 * Mirandese: {{tø|mwl|lhano}}
