--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -95,7 +95,7 @@ From {{etyl|enm|en}} {{term|simple|lang=enm}}, from {{etyl|fro|en}} and {{etyl|f
 {{trans-top|uncomplicated}}
 * Afrikaans: {{t-|af|eenvoudig}}
 * Albanian: {{t+|sq|thjeshtë}}
-* Arabic: {{t+|ar|بسيط|tr=basīṭ|sc=Arab}}
+* Arabic: {{t+|ar|بسيط|tr=basīṭ|sc=Arab}}, {{t-|ar|سهل|tr=sahl|sc=Arab}} {{qualifier|easy}}
 * Aragonese: {{t+|an|simple}}
 * Armenian: {{t-|hy|պարզ|tr=parz}}, {{t-|hy|հասարակ|tr=hasarak}}
 * {{trreq|as}}
