t+fa:[[پرسنل]] t+fa:[[کادر]] ([[WT:EDIT|Assisted]]) <staff#23390621>

--- a/en/s/staff.34070.wikitext
+++ b/en/s/staff.34070.wikitext
@@ -113,6 +113,7 @@
 {{trans-mid}}
 * Japanese: {{t+|ja|人員|tr=じんいん, jin'in|sc=Jpan}}, {{t+|ja|スタッフ|tr=sutaffu|sc=Jpan}}
 * Macedonian: {{t-|mk|персонал|m|tr=personál}}, {{t-|mk|кадар|m|tr=kádar}}
+* Persian: {{t-|fa|پرسنل|tr=personel|sc=fa-Arab}}, {{t-|fa|کادر|tr=kâdr|sc=fa-Arab}}
 * Polish: {{t+|pl|personel|m}}, {{t-|pl|pracownicy|p}}
 * Portuguese: {{t+|pt|pessoal|m}}
 * Russian: {{t+|ru|персонал|m|tr=personál}}, {{t+|ru|кадр|alt=кадры|m-p|tr=kádry}}, {{t+|ru|штат|m|tr=štat|sc=Cyrl}}
