t+sv:[[metallurg]] t-balance ([[WT:EDIT|Assisted]]) <metallurgist#23392135>

--- a/en/m/metallurgist.720328.wikitext
+++ b/en/m/metallurgist.720328.wikitext
@@ -14,10 +14,11 @@
 * Czech: {{t-|cs|metalurg|m}}
 * Finnish: {{t+|fi|metallurgi}}
 * French: {{t+|fr|métallurgiste|m|f}}
-{{trans-mid}}
 * German: {{t-|de|Metallurg|m}}, {{t-|de|Metallurge|m}}, {{t-|de|Metallurgin|f}}
+{{trans-mid}}
 * Russian: {{t+|ru|металлург|m|tr=metallúrg}}
 * Spanish: {{t-|es|metalúrgico|m|f}}, {{t-|es|metalurgista|m}}
+* Swedish: {{t-|sv|metallurg|c}}
 * Ukrainian: {{t-|uk|металург|m|tr=metallúrh|sc=Cyrl}}
 * Volapük: {{qualifier|epicene}} {{t+|vo|metalavan}}, {{qualifier|male}} {{t-|vo|himetalavan}}, {{qualifier|female}} {{t-|vo|jimetalavan}}, {{qualifier|collective, epicene}} {{t-|vo|metalavanef}}
 {{trans-bottom}}
