--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -13,11 +13,10 @@ From {{etyl|enm|en}} {{term|beholden|lang=enm}}, from {{etyl|ang|en}} {{term|beh
 
 # {{context|transitive|lang=en}} To [[see]], or to [[look at]].
 
-===Usage notes===
+====Usage notes====
 Rarely used in informal speech. The past participle [[beholden]] now has a meaning detached from the other forms of the word.
 
 ====Synonyms====
-{{rfc-level|Synonyms at L4+ not in L3 POS section|lang=en}}
 * [[get a load of]]
 
 ====Translations====
