--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan|lang=ang}}, from {{etyl|gem-pro|en}} {{term/t|gem-pro|*hwistlōjanan}}
+{{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan|lang=ang}}, from {{etyl|gem-pro|en}} {{term/t|gem-pro|*hwistlōną}}
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/wɪsl̩/}}, {{X-SAMPA|1=/wIsl=/}}
