--- a/en/p/pledge.7357.wikitext
+++ b/en/p/pledge.7357.wikitext
@@ -45,7 +45,7 @@ From {{etyl|enm|en}} {{term/t|enm|plege}}, from {{etyl|xno|en}} {{term/t|fro|ple
 * Romanian: {{t+|ro|promite}}, {{t+|ro|garanta}}
 * Russian: {{t+|ru|обещать|impf|tr=obeščátʹ}}, {{t+|ru|пообещать|pf|tr=poobeščátʹ}}, {{t+|ru|заверять|impf|tr=zaverjátʹ}}, {{t+|ru|заверить|pf|tr=zavéritʹ}}, {{t+|ru|клясться|impf|tr=kljástʹsja}}, {{t+|ru|поклясться|pf|tr=pokljástʹsja}}
 * Serbo-Croatian:
-*: Cyrillic: {{t-|sh|залога}}, {{t-|sh|завет}}, {{t-|sh|завјет}}, {{t-|sh|обећање}}, {{т|sh|присега}}
+*: Cyrillic: {{t-|sh|залога}}, {{t-|sh|завет}}, {{t-|sh|завјет}}, {{t-|sh|обећање}}, {{t|sh|присега}}
 *: Roman: {{t-|sh|zaloga}}, {{t-|sh|zavet}}, {{t-|sh|zavjet}}, {{t-|sh|obećanje}}, {{t-|sh|prisega}}
 * {{trreq|sk}}
 * Slovene: {{t-|sl|zapriseči}}, {{t-|sl|zavezati se}}, {{t-|sl|zaobljubiti se}}
