t+eo:[[rigardi]] t-balance ([[WT:EDIT|Assisted]]) <behold#23405003>

--- a/en/b/behold.6790.wikitext
+++ b/en/b/behold.6790.wikitext
@@ -27,13 +27,14 @@ Rarely used in informal speech. The past participle [[beholden]] now has a meani
 * Bulgarian: {{t+|bg|гледам}}, {{t+|bg|виждам}}
 * Catalan: [[mirar]], [[vigilar]]
 * Dutch: {{t+|nl|aanschouwen}}
+* Esperanto: {{t|eo|rigardi}}
 * Finnish: [[katsoa]] (1)
 * French: {{t+|fr|regarder}}, {{t+|fr|voir}}
 * German: {{t+|de|betrachten}}, {{t+|de|sehen}}, {{t+|de|schauen}}
 * Hungarian: {{t+|hu|meglát}}, {{t+|hu|észrevesz}}, {{t+|hu|megpillant}}
 * Icelandic: {{t+|is|sjá}}
-* Italian: {{t+|it|guardare}}
 {{trans-mid}}
+* Italian: {{t+|it|guardare}}
 * Japanese: {{t+|ja|見る|tr=miru}}
 * Macedonian: [[Гледа]], [[Следи]]
 * Mandarin: {{t-|cmn|看|tr=kàn|sc=Hani}}
