--- a/en/o/onesie.741289.wikitext
+++ b/en/o/onesie.741289.wikitext
@@ -15,6 +15,9 @@ From the brand name Onesies. The name became generic and was reinterpreted as a 
 ====Usage notes====
 The name Onesies is trademarked by the company Gerber Childrenswear. Hence, a commercial use of the word "onesie" could be legally disputed.
 
+====Synonyms====
+* {{sense|a one-piece baby garment}} [[romper suit]], [[romper]]
+
 ====Translations====
 {{trans-top|a one-piece baby garment}}
 * Dutch: {{t|nl|romper|m}}, {{t|nl|rompertje|n}}, {{t|nl|kruippak|n}}, {{t|nl|kruippakje|n}}
