--- a/en/o/onesie.741289.wikitext
+++ b/en/o/onesie.741289.wikitext
@@ -16,7 +16,7 @@ From the brand name Onesies. The name became generic and was reinterpreted as a 
 The name Onesies is trademarked by the company Gerber Childrenswear. Hence, a commercial use of the word "onesie" could be legally disputed.
 
 ====Synonyms====
-* {{sense|a one-piece baby garment}} [[romper]]
+* {{sense|a one-piece baby garment}} [[romper]], [[romper suit]]
 
 ====Translations====
 {{trans-top|a one-piece baby garment}}
