--- a/en/o/onesie.741289.wikitext
+++ b/en/o/onesie.741289.wikitext
@@ -24,6 +24,11 @@ The name Onesies is trademarked by the company Gerber Childrenswear. Hence, a co
 {{trans-mid}}
 {{trans-bottom}}
 
+{{trans-top|an adult loungewear jumpsuit}}
+* Dutch: {{t|nl|romper|m}}
+{{trans-mid}}
+{{trans-bottom}}
+
 [[Category:en:Clothing]]
 [[Category:en:One]]
 
