--- a/en/b/bubble.7366.wikitext
+++ b/en/b/bubble.7366.wikitext
@@ -50,6 +50,31 @@ Partly imitative, also influenced by {{term|burble}}.
 #* Shakespeare
 #*: Then a soldier {{...}} / Seeking the '''bubble''' reputation / Even in the cannon's mouth.
 
+====Related terms====
+{{rel-top3|Terms derived from ''bubble'' (noun)}}
+* [[boy in the bubble]]
+* [[bubble and squeak]]
+* [[bubbly]]
+* [[bubble bath]]
+* [[bubble blower]]
+* [[bubble chamber]]
+* [[bubble era]]
+{{rel-mid3}}
+* [[bubble gum]]
+* [[bubble jet printer]]
+* [[bubble team]]
+* [[bubble wrap]]
+* [[burst someone's bubble]]
+* [[down bubble]]
+* [[housing bubble]]
+{{rel-mid3}}
+* [[land bubble]]
+* [[on the bubble]]
+* [[speculative bubble]]
+* [[stock bubble]]
+* [[up bubble]]
+{{rel-bottom}}
+
 ====Translations====
 {{trans-top|spherically contained volume of air}}
 * Afrikaans: {{t+|af|bel}}
@@ -224,29 +249,6 @@ Partly imitative, also influenced by {{term|burble}}.
 * {{ttbc|ko}}: {{t+|ko|거품|tr=geopum}}
 * {{ttbc|lt}}: {{t|la|burbulas|m}}
 {{trans-bottom}}
-
-====Related terms====
-{{rel-top|terms related to "bubble"}}
-* [[bubbly]]
-* [[bubble bath]]
-* [[bubble blower]]
-* [[bubble chamber]]
-* [[bubble era]]
-* [[bubble gum]]
-* [[bubble jet printer]]
-* [[bubble wrap]]
-{{rel-mid}}
-* [[bubble and squeak]]
-* [[burst someone's bubble]]
-* [[down bubble]]
-* [[housing bubble]]
-* [[land bubble]]
-* [[stock bubble]]
-* [[up bubble]]
-* [[on the bubble]]
-* [[bubble team]]
-* [[boy in the bubble]]
-{{rel-bottom}}
 
 ===Verb===
 {{en-verb|bubbl|es}}
