--- a/en/q/quadruped.4320.wikitext
+++ b/en/q/quadruped.4320.wikitext
@@ -20,7 +20,7 @@ From {{etyl|fr|en}} {{term|quadrupède|lang=fr}}, from {{etyl|frm|en}}, from {{e
 * Dutch: {{t|nl|viervoeter|m}}
 * Finnish: {{t|fi|nelijalkainen}}
 * French: {{t+|fr|quadrupède|m}}, {{t+|fr|tétrapode|m}}
-* German: {{t|de|Vierfüßer|m}}, {{t|de|Vierfüßerin|f}}, {{t|de|Vierfüßler|m}}, {{t|de|Vierfüßlerin|f}}, {{t|de|Quadrupede|m}}
+* German: {{t|de|Vierfüßer|m}}, {{t|de|Vierfüßerin|f}}, {{t|de|Vierfüßler|m}}, {{t|de|Vierfüßlerin|f}}, {{t|de|Quadrupeder|m}}, {{t|de|Quadrupede|f}}
 * Icelandic: {{t|is|ferfætlingur|m}}
 * Japanese: {{t|ja|四肢動物|tr=ししどうぶつ, shishi dōbutsu|sc=Jpan}}
 * Navajo: {{t|nv|naaldlooshii}}
@@ -30,7 +30,7 @@ From {{etyl|fr|en}} {{term|quadrupède|lang=fr}}, from {{etyl|frm|en}}, from {{e
 * Spanish: {{t+|es|cuadrúpedo|m}}
 * Telugu: {{t+|te|చతుష్పదము|tr=chatush-padamu}}
 * Tocharian B: {{t|txb|śwerppewä}}
-* Volapük: {{qualifier|male or female}} {{t+|vo|folfutaf}}, {{qualifier|male}} {{t|vo|hifolfutaf}}, {{qualifier|female}} {{t|vo|jifolfutaf}}, {{qualifier|male or female}} {{t+|vo|follögaf}}, {{qualifier|male}} {{t|vo|hifollögaf}}, {{qualifier|female}} {{t|vo|jifollögaf}}
+* Volapük: {{qualifier|♂♀}} {{t+|vo|folfutaf}}, {{qualifier|♂}} {{t|vo|hifolfutaf}}, {{qualifier|♀}} {{t|vo|jifolfutaf}}, {{qualifier|♂♀}} {{t+|vo|follögaf}}, {{qualifier|♂}} {{t|vo|hifollögaf}}, {{qualifier|♀}} {{t|vo|jifollögaf}}
 {{trans-bottom}}
 
 ====Derived terms====
