--- a/en/a/antinomianism.801172.wikitext
+++ b/en/a/antinomianism.801172.wikitext
@@ -7,7 +7,7 @@ From {{suffix|antinomian|ism}}, coined by {{w|Martin Luther}}, notably used in h
 ===Noun===
 {{en-noun|~}}
 
-# {{context|Christianity|lang=en}} a religious movement which believes that only the spiritual 'law of Faith' (Romans 3:27) is essential for salvation; and which is 'against' all other practical 'laws' being taught as being essential for salvation; and refering to them as legalism.
+# {{context|Christianity|lang=en}} a religious movement which believes that only the spiritual 'law of Faith' (Romans 3:27) is essential for salvation; and which is 'against' all other practical 'laws' being taught as being essential for salvation; and referring to them as legalism.
 # {{context|Judaism|lang=en}} opposition to the [[Torah]].
 
 ====Antonyms====
