--- a/en/a/attend.7359.wikitext
+++ b/en/a/attend.7359.wikitext
@@ -25,11 +25,17 @@ From {{etyl|enm|en}} {{term|attenden|lang=enm}}, {{term|atenden|lang=enm}}, from
 # {{context|archaic|transitive|lang=en}} To [[listen]] to (something or someone). {{defdate|from 15th c.}}
 # {{context|archaic|intransitive|lang=en}} To [[listen]] ({{term|to}}, {{term|unto}}). {{defdate|from 15th c.}}
 # {{senseid|en|to turn one's consideration to, deal with}}{{context|intransitive|lang=en}} To turn one's [[consideration]] ({{term|to}}); to [[deal]] with (a task, problem, concern etc.), to look after. {{defdate|from 15th c.}}
+#: {{usex|lang=en|Secretaries '''attend''' to correspondence.}}
 #*{{quote-book|year=1918|author={{w|W. B. Maxwell}}|chapter=15
 |title=[http://openlibrary.org/works/OL1097634W The Mirror and the Lamp]
 |passage=Edward Churchill still '''attended''' to his work in a hopeless mechanical manner like a sleep-walker who walks safely on a well-known round. But his Roman collar galled him, his cossack stifled him, his biretta was as uncomfortable as a merry-andrew's cap and bells.}}
 # {{context|transitive|lang=en}} To [[wait upon]] as a [[servant]] etc.; to accompany to assist (someone). {{defdate|from 15th c.}}
+#: {{usex|lang=en|Valets '''attend''' to their employer's wardrobe.}}
 # {{senseid|en|to be present at}}{{context|transitive|lang=en}} To be [[present]] at (an event or place) in order to take part in some action or proceedings. {{defdate|from 17th c.}}
+#: {{usex|lang=en|Children must '''attend''' primary school.}}
+#*{{quote-book|year=1898|author={{w|Winston Churchill (novelist)|Winston Churchill}}
+|title={{w|The Celebrity}}|chapter=5
+|passage=In the eyes of Mr. Farquhar Fenelon Cooke the apotheosis of the Celebrity was complete. The people of Asquith were not only willing to '''attend''' the house-warming, but had been worked up to the pitch of eagerness. The Celebrity as a matter of course was master of ceremonies.}}
 #* '''1994''', {{w|Nelson Mandela}}, ''{{w|Long Walk to Freedom}}'', Abacus 2010, p. 20:
 #*: I '''attended''' a one-room school next door to the palace and studied English, Xhosa, history and geography.
 
