--- a/en/i/incrust.741077.wikitext
+++ b/en/i/incrust.741077.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-{{etyl|la|en}} {{lena}} {{term|incrustare}}; prefix {{term|in-}} in + {{term|crustare}} to cover with a crust: compare {{etyl|fr|-}} {{term|incruster|lang=fr}}. See {{term|crust}}.
+From {{etyl|fr|en}} {{term|incruster|lang=fr}}, from {{etyl|la|en}} {{term|incrustare}}; prefix {{term|in-}} in + {{term|crustare}} to cover with a crust. See {{term|crust}}.
 
 ===Verb===
 {{en-verb}}
