/* Translations */ +dsb <blow#23499603>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -153,6 +153,8 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{term/t|ang
 * Sicilian: {{t+|scn|ciusciari}}
 * Slovak: {{t|sk|duť}}, {{t|sk|fúkať}}, {{t|sk|vanúť}}
 * Slovene: {{t+|sl|pihati}}
+* Sorbian:
+*: Lower Sorbian: {{t|dsb|duś|impf}}, {{t|dsb|dunuś|pf}}
 * Spanish: {{t+|es|soplar}}
 * Swedish: {{t+|sv|blåsa}}
 * Turkish: {{t+|tr|üflemek}}, {{t+|tr|esmek}}
