--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -85,7 +85,7 @@ Short for {{term|copper||police officer}}, itself from {{term|cop||one who cops}
 {{trans-bottom}}
 
 ===Etymology 4===
-{{etyl|ang|en}} {{term|lang=ang|cop}}, {{term|copp}}, from Germanic.  Cognate with Dutch {{term|kop|lang=nl}}, German {{term|Kopf|lang=de}}.
+{{etyl|ang|en}} {{term|lang=ang|cop}}, {{term|copp}}, from {{etyl|gem-pro|en}} {{term/t|gem-pro|*kuppaz||vault, basin, round object}}, from  {{etyl|ine-pro|en}} {{term/t|ine-pro|*gu-||}}.  Cognate with Dutch {{term|kop|lang=nl}}, German {{term|Kopf|lang=de}}.
 
 ====Noun====
 {{en-noun}}
