edit section 1.2 ([[WT:EDIT|Assisted]]) <antinomianism#23502159>

--- a/en/a/antinomianism.801172.wikitext
+++ b/en/a/antinomianism.801172.wikitext
@@ -7,7 +7,7 @@ From {{suffix|antinomian|ism}}, coined by {{w|Martin Luther}}, notably used in h
 ===Pronunciation===
 * {{hyphenation|an|ti|no|mi|an|ism}}
 {{rfp|lang=en}}
-
+{{rfap|lang=en}}
 ===Noun===
 {{en-noun|~}}
 
