remove false information inserted by Richontaban <haematidrosis#23536682>

--- a/en/h/haematidrosis.746522.wikitext
+++ b/en/h/haematidrosis.746522.wikitext
@@ -7,7 +7,7 @@
 * [[haematohidrosis]]
 
 ===Etymology===
-From Greek [[αιματοίδρουν]] (''haimatohidroun'') to sweat blood: ''haimato-'', "blood" + ''hidroun'', "to sweat".
+From Greek ''haimato-'', "blood" + ''hidroun'', "to sweat".
 
 ===Pronunciation===
 * {{IPA|/ˌhe-mat-idˈro-sis/}}
